snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/maven-metadata.xml.sha256
01bf8ee3e373cdfbfef5022052e170cd5befb1d422678332f197ae1e521ec5ba